interpreter/tests/test-modules/misc.enzo
//= Redundant semicolons and whitespace
;;;;;;    // error: too many semicolons
;   ;     // error: too many semicolons

//= Invalid parenthesis/brackets/braces
(1 + 2;                 // error: unmatched parenthesis
[1, 2, 3;               // error: unmatched bracket
{ $a: 1, $b: 2;         // error: unmatched brace
